--- a/TheMovieDB/src/app/app.component.css
+++ b/TheMovieDB/src/app/app.component.css
@@ -6,8 +6,9 @@
     padding: 50px;
     background-color: #111C24;
     height:400px;
- 
+
 }
+
 
 .TopTitle {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -19,12 +20,15 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #7DD07A;
     font-size: 20px;
+    text-align: center;
+
 }
 
 .MainText {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serifs;
     color: white;
     font-size: 15px;
+    text-align: center;
 }
 
 .MovieImg {
