--- a/TheMovieDB/src/app/app.component.html
+++ b/TheMovieDB/src/app/app.component.html
@@ -11,10 +11,9 @@
 
   <br>
 
-
   <div class="Bodytext">
 
-    Movie Title
+    Movie Title {{ MovieTitle }}
 
   </div>
 
@@ -31,10 +30,23 @@
 
   </div>
 
+  <div class="MainText">
+
+    Stuff about killing dragons and all that cool stuff
+
+  </div>
+
+  <br>
 
   <div class="Bodytext">
 
     Release Date
+
+  </div>
+
+  <div class="Bodytext">
+
+    Movie Rating
 
   </div>
 
